crates/bril-macros/tests/instruction/incorrect_add_instruction.stderr
error: invalid instruction
 --> tests/instruction/incorrect_add_instruction.rs:5:1
  |
5 | instruction!(op = add, args = [a, b, c], dest = sum);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `instruction` (in Nightly builds, run with -Z macro-backtrace for more info)
